calico-lab/calico-policy/calico.deny-all.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  order: 2000
  selector: "projectcalico.org/namespace in {'lab-1','lab-2'}"
  types:
    - Ingress
    - Egress
