calico-lab/calico-policy/k8s.centos-to-nginx.yml
# allow nginx ingress within dev namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: lab-1
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              compliance: open
---

# allow centos egress to nginx app within dev namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-centos-egress
  namespace: lab-1
spec:
  podSelector:
    matchLabels:
      app: centos
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: nginx
